--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./build:/usr/share/nginx/html
     ports:
       - "8080:80"
+    depends_on:
+      - profile
     expose:
       - "80"
     command: ["nginx", "-g", "daemon off;"]
