--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+    "@babel/plugin-proposal-private-property-in-object": "^7.x.x"
   },
   "browserslist": {
     "production": [
@@ -28,7 +28,12 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version",
+      "last 1 opera version",
+      "last 1 ios_safari version",
+      "last 1 samsung version",
+      "last 1 chromeandroid version"
     ]
   }
 }
