--- a/k8s_manifest.yml
+++ b/k8s_manifest.yml
@@ -1,88 +1,144 @@
 ---
 apiVersion: apps/v1
 kind: Deployment
-
 metadata:
   name: gil-deployment
-  
+  namespace: gil-namespace
 spec:
-  replicas: 1
+  replicas: 2  # Run at least 2 replicas for zero downtime
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0  # Ensure no pods are unavailable during updates
+      maxSurge: 1        # Allow an additional pod during updates
   
   selector:
     matchLabels:
       app: gil
-      
+  
   template:
     metadata:
       labels:
         app: gil
-        
+    
     spec:
       containers:
-      - name: gil
-        image: gil
-        ports:
-        - containerPort: 80
-        
+        - name: gil
+          image: gil  # Ensure you are using the correct image
+          ports:
+            - containerPort: 8080  # App is now listening on 8080
+          
+          volumeMounts:
+            - name: build-volume
+              mountPath: /app/build
+          
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 8080
+            
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          
+          resources:  # Add resource requests and limits
+            requests:
+              memory: "128Mi"
+              cpu: "250m"
+            
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
+      
+      volumes:
+        - name: build-volume
+          persistentVolumeClaim:
+            claimName: build-pvc
+
 ---
 apiVersion: v1
 kind: Service
-
 metadata:
   name: gil-service
-  
+  namespace: gil-namespace
+
 spec:
   selector:
     app: gil
-    
+  
   ports:
     - name: http
       protocol: TCP
-      port: 8080
-      targetPort: 80
-      
-  type: NodePort
+      port: 8080           # Expose service on port 8080
+      targetPort: 8080      # Forward traffic to the container on port 8080
+      nodePort: 30080       # External node port (must be in range 30000-32767)
   
+  type: NodePort
+
 ---
 apiVersion: apps/v1
 kind: Deployment
-
 metadata:
   name: nginx-deployment
-  
+  namespace: gil-namespace
+
 spec:
   replicas: 1
-  
   selector:
     matchLabels:
       app: nginx
-      
+  
   template:
     metadata:
       labels:
         app: nginx
-        
+    
     spec:
       containers:
-      - name: nginx
-        image: nginx:alpine
-        ports:
-        - containerPort: 80
-        
+        - name: nginx
+          image: nginx:alpine
+          
+          ports:
+            - containerPort: 80
+          
+          volumeMounts:              # Mount build volume for nginx to serve
+            - name: build-volume
+              mountPath: /usr/share/nginx/html
+          
+          resources:  # Add resource requests and limits
+            requests:
+              memory: "64Mi"
+              cpu: "100m"
+            
+            limits:
+              memory: "128Mi"
+              cpu: "250m"
+      volumes:
+        - name: build-volume
+          persistentVolumeClaim:
+            claimName: build-pvc
+
 ---
 apiVersion: v1
 kind: Service
-
 metadata:
   name: nginx-service
-  
+  namespace: gil-namespace
+
 spec:
   selector:
     app: nginx
-    
+  
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-      
+  
   type: LoadBalancer
