--- a/Pipelines/compose-pipeline.yml
+++ b/Pipelines/compose-pipeline.yml
@@ -24,6 +24,9 @@ steps:
         sudo apt-get update
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
         echo "Docker installation completed!"
+
+      else
+        echo "Docker is already installed"
       fi
 
 - task: Bash@3
@@ -36,12 +39,18 @@ steps:
           echo "Stopping and removing containers..."
           docker stop $(docker ps -aq)
           docker rm $(docker ps -aq)
+
+      else
+          echo "No containers to stop or remove."
       fi
 
       # Check if there are any images to remove
       if [ "$(docker images -q)" ]; then
           echo "Removing images..."
           docker rmi $(docker images -q)
+          
+      else
+          echo "No images to remove."
       fi
 
 - task: Bash@3
