--- a/Pipelines/docker-pipeline.yml
+++ b/Pipelines/docker-pipeline.yml
@@ -23,6 +23,15 @@ steps:
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         sudo apt-get update
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+
+        # Add current user to docker group
+        sudo usermod -aG docker $(whoami)
+
+        # Apply group change without relogin
+        newgrp docker <<EONG
+        docker --version
+        EONG
+        
         echo "Docker installation completed!"
 
       else
@@ -48,7 +57,7 @@ steps:
       if [ "$(docker images -q)" ]; then
           echo "Removing images..."
           docker rmi $(docker images -q)
-          
+
       else
           echo "No images to remove."
       fi
