--- a/Pipelines/k8s-pipeline.yml
+++ b/Pipelines/k8s-pipeline.yml
@@ -23,6 +23,15 @@ steps:
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         sudo apt-get update
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+
+        # Add current user to docker group
+        sudo usermod -aG docker $(whoami)
+
+        # Apply group change without relogin
+        newgrp docker <<EONG
+        docker --version
+        EONG
+        
         echo "Docker installation completed!"
 
       else
