--- a/K8s/k8s_manifest.yml
+++ b/K8s/k8s_manifest.yml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gil-namespace
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,7 +32,7 @@ spec:
         - name: gil
           image: gil  # Ensure you are using the correct image
           ports:
-            - containerPort: 8080  # App is now listening on 8080
+            - containerPort: 8080  # App is listening on 8080
           
           volumeMounts:
             - name: build-volume
@@ -48,14 +54,14 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 5
           
-          resources:  # Add resource requests and limits
+          resources:
             requests:
-              memory: "128Mi"
-              cpu: "250m"
+              memory: "128Mi"  # Minimum 128 MiB of memory
+              cpu: "100m"      # Minimum 0.1 of a CPU core
             
             limits:
-              memory: "256Mi"
-              cpu: "500m"
+              memory: "256Mi"  # Maximum 256 MiB of memory
+              cpu: "300m"      # Maximum 0.3 of a CPU core
       
       volumes:
         - name: build-volume
