--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.x.x",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.x.x"
+    "@types/react-dom": "^18.3.0"
   },
   "browserslist": {
     "production": [
