--- a/Pipelines/k8s-pipeline.yml
+++ b/Pipelines/k8s-pipeline.yml
@@ -5,117 +5,34 @@ trigger:
 
 pool: K8S
 
+variables:
+  - group: 
+      K8s-Pipeline
+
 steps:
 - task: printAllVariables@1
   displayName: 'Print all variables'
 
-- task: Bash@3
-  displayName: 'Install Docker'
-  inputs:
-    targetType: 'inline'
-    script: |
-      if ! command -v docker &> /dev/null
-      then
-        echo "Docker not found, installing..."
-        
-        # Detect the OS
-        if [[ "$(lsb_release -is)" == "Debian" ]]; then
-          echo "Detected Debian OS, proceeding with Docker installation for Debian."
-          
-          sudo apt-get update
-          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-          
-          # Add Docker's official GPG key for Debian
-          curl -fsSL https://download.docker.com/linux/debian/gpg | sudo tee /etc/apt/trusted.gpg.d/docker.asc
-          
-          # Set up the stable Docker repository for Debian
-          echo "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          
-          sudo apt-get update
-          
-          # Install Docker and auto-accept to keep existing configuration files
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io --option=Dpkg::Options::="--force-confold"
-        
-        elif [[ "$(lsb_release -is)" == "Ubuntu" ]]; then
-          echo "Detected Ubuntu OS, proceeding with Docker installation for Ubuntu."
-          
-          sudo apt-get update
-          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-          
-          # Add Docker's official GPG key for Ubuntu
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          
-          # Set up the stable Docker repository for Ubuntu
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          
-          sudo apt-get update
-          
-          # Install Docker and auto-accept to keep existing configuration files
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io --option=Dpkg::Options::="--force-confold"
-        
-        else
-          echo "Unsupported OS. This script supports Debian and Ubuntu only."
-          exit 1
-        fi
-        
-        # Start and enable Docker
-        sudo systemctl start docker
-        sudo systemctl enable docker
-        
-        # Add current user to docker group
-        sudo usermod -aG docker $(whoami)
-        
-        # Apply group change without relogin
-        newgrp docker <<EONG
-        docker --version
-        EONG
-        
-        echo "Docker installation completed!"
-        
-      else
-        echo "Docker is already installed"
-      fi
-
-
-- task: Bash@3
-  displayName: 'Clear Containers and Images'
-  inputs:
-    targetType: 'inline'
-    script: |
-      # Check if there are any containers to stop and remove
-      if [ "$(docker ps -aq)" ]; then
-          echo "Stopping and removing containers..."
-          docker stop $(docker ps -aq)
-          docker rm $(docker ps -aq)
-
-      else
-          echo "No containers to stop or remove."
-      fi
-
-      # Check if there are any images to remove
-      if [ "$(docker images -q)" ]; then
-          echo "Removing images..."
-          docker rmi $(docker images -q)
-
-      else
-          echo "No images to remove."
-      fi
-
-- task: Bash@3
-  displayName: 'Build Docker Image'
-  inputs:
-    targetType: 'inline'
-    script: 'docker build -t gil .'
-
+# Apply Kubernetes manifest
 - task: Bash@3
   displayName: 'Run K8S Deployment'
   inputs:
     targetType: 'inline'
     script: |
-      kubectl apply -f k8s_manifest.yml
+      echo "$(SUDO_PASSWORD)" | sudo -S kubectl apply -f Pipelines/k8s_manifest.yml
 
+# Wait for K8S pods to be ready
+- task: Bash@3
+  displayName: 'Wait for Pods to be Ready'
+  inputs:
+    targetType: 'inline'
+    script: |
+      echo "$(SUDO_PASSWORD)" | sudo -S kubectl wait --for=condition=ready pod -l app=gil -n gil-namespace --timeout=300s
+
+# Wait for testing (manual 10-minute delay)
 - task: Bash@3
   displayName: 'Wait for Testing'
   inputs:
     targetType: 'inline'
-    script: 'echo "Waiting for 11 minute to test the container"; sleep 60'
+    script: |
+      echo "Waiting for 10 minutes to test the container"; sleep 600
