--- a/Pipelines/k8s_manifest.yml
+++ b/Pipelines/k8s_manifest.yml
@@ -27,7 +27,7 @@ spec:
         - name: gil
           image: gilush/profile:latest
           ports:
-            - containerPort: 8080  # Ensure this matches the exposed port in the Dockerfile
+            - containerPort: 8080
 
 ---
 apiVersion: v1
@@ -44,5 +44,5 @@ spec:
     - port: 8080         # Expose port 8080 externally
       targetPort: 8080   # Forward traffic to port 8080 in the pod
       nodePort: 30080    # NodePort for external access
-      
+
   type: NodePort
